--- a/DockerFile
+++ b/DockerFile
@@ -9,7 +9,4 @@ COPY . .
 
 EXPOSE 8000
 
-ADD https://github.com/ufoscout/docker-compose-wait/releases/download/2.2.1/wait /wait
-RUN chmod +x /wait
-
-CMD /wait && python3 -u app.py
+CMD python3 -u app.py
